----------
v6.1.0-git
----------

[mms] Add the 'mbox_acl' hook.
[mms] Move folder disabling configuration into the permissions system.
[mms] Upgraded IMP permissions to allow permissions to be set per active
      backend.
[mms] Allow the active search query to be edited in the smartmobile view.
[mms] Add link to exit out of search view in smartmobile view into the
      original mailbox.
[mms] Allow default special mailbox names to be overriden by a backend.
[mms] Move special mailboxes autocreation configuration into backends.php.
[mms] Add SMTP debugging.
[mms] Disable mailbox sorting by default if the remote server does not natively
      support it (Bug #12001).
[mms] Add the 'msg_filter' hook.
[mms] Added the 'attach_body_check' hook.
[mms] Add linked attachment information directly to main body text.
[mms] Added argument to the 'trailer' hook to allow HTML trailers to be
      generated.
[mms] Attachments can now be configured to be linked only if over a
      configurable size threshold.
[mms] Linked attachments are no longer a user-configurable action.
[mms] Spam/innocent reporting on the smartmobile message page now uses a popup
      instead of a modal dialog.
[mms] Re-add alerts log to dynamic mailbox view.
[mms] Rewritten/improved linked attachment code.
[mms] Add discard draft option to compose page allowing the user to cancel
      composition and permanently delete the original draft (Request #12017).
[mms] Minimal view menu entries are now accessible via numbered accesskeys
      (Request #5847).
[mms] Add image upload feature to the HTML editor image plugin.
[mms] Allow drag & drop/pasting of images into the HTML editor.
[mms] All basic view pages are now routed through the basic.php endpoint.
[mms] Save AJAX showMessage call when reloading the dynamic mailbox page with a
      message preview active.
[mms] Dynamically display MIME type icon for attachments uploaded on the
      dynamic compose page.