@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Support showing blocked Data URIs in HTML message data.
 * [mms] Add the &apos;mbox_acl&apos; hook.
 * [mms] Move folder disabling configuration into the permission system.
 * [mms] Upgraded IMP permissions to allow permissions to be set per active backend.
@@ -1331,7 +1332,7 @@
    <package>
     <name>Horde_Url</name>
     <channel>pear.horde.org</channel>
-    <min>2.1.0</min>
+    <min>2.2.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
